Fixed truck, fixed some z-indexes

--- a/src/components/GamePage/Crane/Crane.css
+++ b/src/components/GamePage/Crane/Crane.css
@@ -3,5 +3,5 @@
   bottom: 60px;
   left: 0px;
   width: 800px;
-  z-index: 0;
+  z-index: 9;
 }
