--- a/src/components/GamePage/HUD/HUD.css
+++ b/src/components/GamePage/HUD/HUD.css
@@ -3,7 +3,7 @@
   background-color: rgba(255, 255, 255, 0.5);
   top: 10px;
   border-radius: 25px;
-  z-index: 120;
+  z-index: 50;
 }
 
 .HUD p {
